--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 <script>
     // URL для вашего Google Apps Script Web App.
     // Замените этот placeholder на фактический URL после развертывания скрипта.
-    const GOOGLE_SHEET_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwYJ6dMr4Wv5VkagslH-glvYCGcys22IhfVviYC5Bu2BPkNos9YUvHxcwy4sjKZ9aZ1Mw/exec'; // <--- ОБНОВИТЕ ЭТУ СТРОКУ на ваш НОВЫЙ URL!
+    const GOOGLE_SHEET_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwX1lU2VE3XEWxDvobnF1_Z_Mm7ECf2TkeLoxrh7Ajx-odBbXR3My-dztYmqdGwp2yx/exec'; // <--- ОБНОВИТЕ ЭТУ СТРОКУ на ваш НОВЫЙ URL!
 
     const dynamicElementData = {};
 
@@ -626,12 +626,11 @@
         return new Promise((resolve, reject) => {
             const reader = new FileReader();
             reader.onloadend = () => {
-                console.log("blobToBase64: FileReader result (Data URL start):", reader.result ? reader.result.substring(0, 100) + '...' : 'null or empty');
+                console.log("blobToBase64: FileReader result (Data URL start):", reader.result ? String(reader.result).substring(0, 100) + '...' : 'null or empty');
                 const base64String = reader.result ? String(reader.result).split(',')[1] : null; // Ensure result is string before split
                 if (!base64String) {
                     console.error("blobToBase64: Base64 string is empty or null after splitting.");
-                    // alert("Ошибка: Не удалось извлечь Base64 строку из PDF Blob."); // Removed alert here, handled in submitForm
-                    resolve(null); // Resolve with null if conversion fails or result is empty
+                    resolve(null); 
                     return;
                 }
                 console.log("blobToBase64: Conversion complete. Base64 length:", base64String.length);
@@ -639,8 +638,7 @@
             };
             reader.onerror = (error) => {
                 console.error("blobToBase64: FileReader error:", error);
-                // alert(`Ошибка FileReader при конвертации PDF: ${error.message}.`); // Removed alert here, handled in submitForm
-                reject(error); // Reject on error
+                reject(error); 
             };
             reader.readAsDataURL(blob);
         });
@@ -1058,7 +1056,7 @@
             };
 
             console.log("sendToGoogleSheet: Отправка данных в Google Apps Script."); 
-            await sendToGoogleSheet(googleSheetPayload, pdfBase64, installationPhotoDataUrl); // РАСКОММЕНТИРОВАНО
+            await sendToGoogleSheet(googleSheetPayload, pdfBase64, installationPhotoDataUrl); 
             console.log("submitForm: sendToGoogleSheet called.");
 
         } catch (err) {
