--- a/index.html
+++ b/index.html
@@ -491,7 +491,8 @@
 <script>
     // URL для вашего Google Apps Script Web App.
     // Замените этот placeholder на фактический URL после развертывания скрипта.
-    const GOOGLE_SHEET_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwX1lU2VE3XEWxDvobnF1_Z_Mm7ECf2TkeLoxrh7Ajx-odBbXR3My-dztYmqdGwp2yx/exec'; // <--- ОБНОВИТЕ ЭТУ СТРОКУ на ваш НОВЫЙ URL!
+    // ВАЖНО: замените /exec на /dev для использования тестового развертывания
+    const GOOGLE_SHEET_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbwX1lU2VE3XEWxDvobnF1_Z_Mm7ECf2TkeLoxrh7Ajx-odBbXR3My-dztYmqdGwp2yx/dev'; // <--- ОБНОВИТЕ ЭТУ СТРОКУ на ваш НОВЫЙ URL, изменив /exec на /dev!
 
     const dynamicElementData = {};
 
