--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 <script>
     // URL для вашего Google Apps Script Web App.
     // ЗАМЕНИТЕ ЭТОТ PLACEHOLDER НА ФАКТИЧЕСКИЙ URL ВАШЕГО WEB-ПРИЛОЖЕНИЯ GOOGLE APPS SCRIPT ПОСЛЕ РАЗВЕРТЫВАНИЯ!
-    const GOOGLE_SHEET_WEB_APP_URL = 'YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL_HERE'; 
+    const GOOGLE_SHEET_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbys9nb7UL-oCNbkvp8znJUwTjsqQ28mF37-zme5G33LznWLZpDHKRAE8c8vXUch9Geq/exec'; 
 
     const dynamicElementData = {};
 
